set(LAPACK_SINGLE_SOURCES
                            ilaslc.f
                            ilaslr.f
                            isamax.f
                            sasum.f
                            saxpy.f
                            scopy.f
                            sdot.f
                            sgbcon.f
                            sgbequ.f
                            sgbmv.f
                            sgbrfs.f
                            sgbsv.f
                            sgbsvx.f
                            sgbtf2.f
                            sgbtrf.f
                            sgbtrs.f
                            sgemm.f
                            sgemv.f
                            sger.f
                            sgtcon.f
                            sgtrfs.f
                            sgtsv.f
                            sgtsvx.f
                            sgttrf.f
                            sgttrs.f
                            sgtts2.f
                            sisnan.f
                            slabad.f
                            slacn2.f
                            slacpy.f
                            slae2.f
                            slaev2.f
                            slagtm.f
                            slaisnan.f
                            slamch.f
                            slangb.f
                            slangt.f
                            slanst.f
                            slansy.f
                            slantb.f
                            slapy2.f
                            slaqgb.f
                            slaqsy.f
                            slarfb.f
                            slarf.f
                            slarfg.f
                            slarft.f
                            slartg.f
                            slascl.f
                            slaset.f
                            slasr.f
                            slasrt.f
                            slassq.f
                            slaswp.f
                            slatbs.f
                            slatrd.f
                            snrm2.f
                            sorg2l.f
                            sorg2r.f
                            sorgql.f
                            sorgqr.f
                            sorgtr.f
                            spoequ.f
                            spotrf2.f
                            spotrf.f
                            srscl.f
                            sscal.f
                            ssteqr.f
                            ssterf.f
                            sswap.f
                            ssyev.f
                            ssymv.f
                            ssyr2.f
                            ssyr2k.f
                            ssyrk.f
                            ssytd2.f
                            ssytrd.f
                            stbsv.f
                            strmm.f
                            strmv.f
                            strsm.f
)
add_library(clubb_lapack_single OBJECT ${LAPACK_SINGLE_SOURCES})
add_compile_options(fpp)